--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "babel src -d lib",
     "test": "mocha --compilers js:babel-register",
-    "start": "npm run build && electron ./lib/gui.js"
+    "start": "npm run build && electron ./lib/gui.js",
+    "debug": "npm run build && electron ./lib/gui.js --debug"
   },
   "keywords": [],
   "author": "Luc Rubio <luc@loociano.com>",
