--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "should": "^10.0.0"
   },
   "dependencies": {
-    "electron": "^1.3.3"
+    "electron": "^1.3.3",
+    "ipc": "0.0.1"
   }
 }
