--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "babel-register": "^6.11.6",
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
-    "should": "^10.0.0"
+    "should": "^10.0.0",
+    "sinon": "^1.17.5"
   },
   "dependencies": {
     "electron": "^1.3.3",
