--- a/package.json
+++ b/package.json
@@ -2,16 +2,13 @@
   "name": "gb-ES6",
   "version": "0.0.1",
   "description": "Game Boy emulator in EcmaScript 6",
-  "main": "src/gui.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "build": "babel src -d lib",
+    "build": "browserify src/renderer.js -o bundle.js -t [ babelify --presets [ es2015 ] ]",
     "build-test": "babel src test -d lib",
     "test": "mocha --compilers js:babel-register",
-    "start": "npm run build && electron ./lib/app.js",
-    "debug": "npm run build && electron ./lib/app.js --debug",
     "cli": "npm run build-test && node ./lib/app-cli.js"
   },
   "keywords": [],
@@ -21,14 +18,13 @@
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-register": "^6.11.6",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
-    "should": "^10.0.0",
-    "sinon": "^1.17.5"
+    "should": "^10.0.0"
   },
   "dependencies": {
-    "command-line-args": "^3.0.1",
-    "electron": "^1.3.3",
-    "ipc": "0.0.1"
+    "command-line-args": "^3.0.1"
   }
 }
