Generate browserify bundle

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "test"
   },
   "scripts": {
-    "build": "browserify src/renderer.js -o bundle.js -t [ babelify --presets [ es2015 ] ]",
+    "build": "browserify src/renderer.js -o gb-ES6.js -t [ babelify --presets [ es2015 ] ]",
     "build-test": "babel src test -d lib",
     "test": "mocha --compilers js:babel-register",
     "cli": "npm run build-test && node ./lib/app-cli.js"
